--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,10 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "bootstrap": "^5.3.3",
     "env-cmd": "^10.1.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
     "zod": "^3.23.8"
@@ -27,6 +29,7 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "sass": "^1.77.2",
     "vite": "^5.2.0"
   }
 }
