--- a/server/docker-compose.yaml
+++ b/server/docker-compose.yaml
@@ -8,7 +8,11 @@ services:
       POSTGRES_USER: ${DB_USER}
       POSTGRES_DB: ${DB_NAME}
   app: 
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
+      args:
+        PORT: ${PORT}
     ports:
       - "${PORT}:${PORT}"
     environment:
