--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview",
     "test": "env-cmd mocha -R spec",
     "cypress:open": "cypress open",
-    "cypress:run": "cypress run"
+    "cypress:run:component": "cypress run --component"
   },
   "dependencies": {
     "axios": "^1.7.2",
