--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,25 +1,15 @@
 name: Cypress Test (Application Form)
 
-on:
-  push:
-    branches:
-      - master
+on: [push]
 
 jobs:
   cypress-run:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
+      - name: Cypress run
+        uses: cypress-io/github-action@v2
         with:
-          node-version: '20'
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Run Cypress tests
-        run: npm run cypress:run:component
+          build: npm run build
+          start: npm start
