--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,10 +12,10 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '16' # Specify the Node.js version you need
+          node-version: '20'
 
       - name: Install dependencies
-        run: npm ci # Prefer 'npm ci' if you have a package-lock.json file
+        run: npm ci # 'npm ci' because of package-lock.json file
 
       - name: Build application
         run: npm run build
@@ -26,7 +26,7 @@ jobs:
           CI: true
 
       - name: Wait for application to start
-        run: sleep 20 # Adjust the sleep duration as necessary to wait for your app to start
+        run: sleep 20
 
       - name: Cypress run
         uses: cypress-io/github-action@v5
