--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,34 +1,18 @@
 name: Cypress Test (Application Form)
 
-on: [push]
+on:
+  push:
+    branches:
+      - 'master'
 
 jobs:
   cypress-run:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '20'
-
-      - name: Install dependencies
-        run: npm ci # 'npm ci' because of package-lock.json file
-
-      - name: Build application
-        run: npm run build
-
-      - name: Start application
-        run: npm start &
-        env:
-          CI: true
-
-      - name: Wait for application to start
-        run: sleep 20
-
+        uses: actions/checkout@v4
       - name: Cypress run
-        uses: cypress-io/github-action@v5
+        uses: cypress-io/github-action@v6
         with:
-          start: npm start
+          working-directory: client
+          component: true
