--- a/client/.github/workflows/cypress.yml
+++ b/client/.github/workflows/cypress.yml
@@ -17,9 +17,14 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '20'
-      
-      - name: Install dependencies
+
+      - name: Install server dependencies
+        working-directory: server
         run: npm install
+
+      - name: Start backend server
+        working-directory: server
+        run: docker-compose up --build
 
       - name: Run Cypress tests
         run: npm run cypress:run:component
