--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,25 @@ on:
 jobs:
   cypress-run:
     runs-on: ubuntu-22.04
+    services:
+      db:
+        image: postgres
+        env:
+          POSTGRES_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          POSTGRES_USER: ${{ secrets.DB_USER }}
+          POSTGRES_DB: ${{ secrets.DB_NAME }}
+        ports:
+          - ${{ secrets.DB_PORT }}:5432
+      app:
+        build: .
+        ports:
+          - ${{ secrets.PORT }}:${{ secrets.PORT }}
+        env:
+          DB_HOST: db
+          DB_USER: ${{ secrets.DB_USER }}
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          DB_NAME: ${{ secrets.DB_NAME }}
+          PORT: ${{ secrets.PORT }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
