--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,32 +8,28 @@ on:
 jobs:
   cypress-run:
     runs-on: ubuntu-22.04
-    env:
-      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-      DB_USER: ${{ secrets.DB_USER }}
-      DB_NAME: ${{ secrets.DB_NAME }}
-      DB_PORT: ${{ secrets.DB_PORT }}
-      PORT: ${{ secrets.PORT }}
     services:
-      db:
-        image: postgres
-        env:
-          POSTGRES_PASSWORD: ${{ secrets.DB_PASSWORD }}
-          POSTGRES_USER: ${{ secrets.DB_USER }}
-          POSTGRES_DB: ${{ secrets.DB_NAME }}
+      express-server:
+        image: ngottcosmo/server-app:latest
         ports:
-          - ${{ secrets.DB_PORT }}:5432
-      app:
-        build: .
-        ports:
-          - ${{ secrets.PORT }}:${{ secrets.PORT }}
+          - ${{ secrets.PORT }}
         env:
-          DB_HOST: db
-          DB_USER: ${{ secrets.DB_USER }}
-          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-          DB_NAME: ${{ secrets.DB_NAME }}
           PORT: ${{ secrets.PORT }}
+      db:
+        image: ngottcosmo/postgres:latest
+        ports:
+          - ${{ secrets.DB_PORT }}
+        env:
+          DB_HOST: ${{ secrets.DB_HOST }}
+          DB_NAME: ${{ secrets.DB_NAME }}
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          DB_USER: ${{ secrets.DB_USER }}
+          DB_PORT: ${{ secrets.DB_PORT }}
+  
     steps:
+      - name: Wait for services to start
+        run: sleep 10
+
       - name: Checkout code
         uses: actions/checkout@v4
 
