--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "cypress:run:component": "cypress run --component"
   },
   "dependencies": {
+    "@cypress/vite-dev-server": "^5.1.0",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "react": "^18.2.0",
@@ -24,13 +25,13 @@
   "devDependencies": {
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
-    "@vitejs/plugin-react": "^4.2.1",
+    "@vitejs/plugin-react": "^4.3.0",
     "cypress": "^13.11.0",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "sass": "^1.77.2",
-    "vite": "^5.2.0"
+    "vite": "^5.2.12"
   }
 }
